# OpenGLSampleCmake

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: FindASSIMP.cmake  FindGLM.cmake
include/glad/: glad.h
lib/: assimp.lib
res/shaders/: Basic.frag  Basic.vert
src/: main.cpp
src/helpers/: RootDir.h.in
src/rendering/: Mesh.h  Model.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h
